2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* tests/list: MS Office apps suck, we're not expected to recognise
	a template file by magic (Closes: #18863)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Gnucash documents aren't spreadsheets,
	so call it "financial data", leave the icon as-is though
	(Closes: #19355)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add alias for text/x-csv (Closes: #19664)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/test2.ppm: Add test case for PPM with non-working magic
	(Closes: #19811)

2009-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Koos Vriezen
	<koos.vriezen@gmail.com> to add more aliases for media types,
	as used by kmplayer (Closes: #19671)

2009-01-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/playlist.wpl: Add the application/vnd.ms-wpl mime-type

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.p7b:
	* tests/test.pkipath: Patch from Ville Skyttä
	<ville.skytta@iki.fi> to add PKCS#7 and PkiPath file types
	(Closes: #10864)

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: PKCS#12 bundles are not text files,
	patch from Ville Skyttä <ville.skytta@iki.fi> (Closes: #19056)

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/Stallman_Richard_-_The_GNU_Manifesto.fb2:
	* tests/list: Patch from Pino Toscano <pino@kde.org>
	to add the FictionBook (fb2) file type (Closes: #17553)

2009-01-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Ville Skyttä
	<ville.skytta@iki.fi> to add support for MS cab files
	* tests/copying.cab:
	* tests/list: Add test file for the above

2009-01-07  Pino Toscano  <pino@kde.org>

	* update-mime-database.1: Update the URL to the specifications.