@@ -1717,7 +1717,7 @@ command to generate the output files.
     <_comment>JavaScript program</_comment>
     <alias type="application/x-javascript"/>
     <alias type="text/javascript"/>
-    <sub-class-of type="text/plain"/>
+    <sub-class-of type="text/x-csrc"/>
     <generic-icon name="text-x-script"/>
     <glob pattern="*.js"/>
   </mime-type>
