@@ -118,6 +118,8 @@ test.ext,v text/plain ox
 # Copied from http://bugs.freedesktop.org/show_bug.cgi?id=14329
 test.fl application/x-fluid
 helloworld.java text/x-java ox
+# Copied from http://asurvey.net/ccsfagent/media/survey.js
+survey.js application/javascript ox
 test.cs text/x-csharp ox
 test.dot text/vnd.graphviz x
 test.vala text/x-vala ox
